<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<groupId>org.matsim</groupId>
		<artifactId>contrib</artifactId>
		<version>2025.0-SNAPSHOT</version>
	</parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modelVersion>4.0.0</modelVersion>
	<groupId>org.matsim.contrib</groupId>
	<artifactId>freight</artifactId>
	<name>freight</name>

	<properties>
		<jsprit.version>1.8</jsprit.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.graphhopper</groupId>
			<artifactId>jsprit-core</artifactId>
			<version>${jsprit.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.5</version>
		</dependency>

		<dependency>
			<groupId>com.graphhopper</groupId>
			<artifactId>jsprit-io</artifactId>
			<version>${jsprit.version}</version>
			<exclusions>
				<!-- needed to compile in IntelliJ with Eclipse compiler -->
				<!-- see: https://bugs.eclipse.org/bugs/show_bug.cgi?id=536928 -->
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.graphhopper</groupId>
			<artifactId>jsprit-analysis</artifactId>
			<version>${jsprit.version}</version>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>roadpricing</artifactId>
			<version>2025.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>otfvis</artifactId>
			<version>2025.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
		</dependency>

		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim-examples</artifactId>
			<version>2025.0-SNAPSHOT</version>
		</dependency>

		<!-- This comes from jsprit, but is outdated there. Unclear, when the next release is coming.
		 	Currently (Jan'23), there is a beta version which needs some code adaptions on our side -> will not use it directly...
		 	So I (KMT) am fixing the security issue here by manually setting a more current version of the vulnerable dependencies -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.3</version>
		</dependency>
		<!-- This comes from jsprit, but is outdated there. Unclear, when the next release is coming.
			 Currently (Jan'23), there is a beta version which needs some code adaptions on our side -> will not use it directly...
			 So I (KMT) am fixing the security issue here by manually setting a more current version of the vulnerable dependencies -->
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.2</version>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>jsprit-releases</id>
			<url>https://github.com/jsprit/mvn-rep/raw/master/releases</url>
		</repository>
	</repositories>



</project>
